Feature: Implement send message to phone books feature.
