# docs/swagger.yaml
@@ -86,12 +86,27 @@ definitions:
       phone_number:
         example: "1234567890"
         type: string
+      username:
+        example: johndoe
+        type: string
     type: object
   handlers.SendSMSResponse:
     properties:
       message:
         example: SMS sent successfully
         type: string
+    type: object
+  handlers.SendSMessageToPhoneBooksBody:
+    properties:
+      message:
+        type: string
+      phoneBooks:
+        items:
+          type: string
+        type: array
+    required:
+    - message
+    - phoneBooks
     type: object
   handlers.UpdatePhoneBookNumberRequest:
     properties:
@@ -130,6 +145,8 @@ definitions:
       phoneBookID:
         type: integer
       prefix:
+        type: string
+      username:
         type: string
     type: object
 host: localhost:8080
@@ -551,6 +568,36 @@ paths:
       summary: Create a phone book entry
       tags:
       - phonebook
+  /sms/phonebooks:
+    post:
+      consumes:
+      - application/json
+      description: Send sms to phone books numbers
+      parameters:
+      - description: Phone books sms details.
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.SendSMessageToPhoneBooksBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.SendSMSResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Send sms to phone books numbers
+      tags:
+      - SMS
   /sms/single-sms:
     post:
       consumes:
