# server/sms.go
@@ -8,6 +8,7 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-func smsRouter(e *echo.Echo) {
+func smsRouter(e *echo.Echo, handler *handlers.SmsPhoneBookHandler) {
 	e.POST("sms/single-sms", handlers.SendSingleSMSHandler, middlewares.IsLoggedIn)
+	e.POST("sms/phonebooks", handler.SendMessageToPhoneBooksHandler, middlewares.IsLoggedIn)
 }
